--- a/Random Forest Classification/Random Forest Classification.ipynb
+++ b/Random Forest Classification/Random Forest Classification.ipynb
@@ -262,7 +262,7 @@
     "for i, j in enumerate(np.unique(y_set)):\n",
     "    plt.scatter(X_set[y_set == j, 0], X_set[y_set == j, 1],\n",
     "                c = ListedColormap(('red', 'green'))(i), label = j)\n",
-    "plt.title('SVM-linear (Training set)')\n",
+    "plt.title('Random Forest Classifier')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Estimated Salary')\n",
     "plt.legend()\n",
